# notepadng

./: CMakeLists.txt  README.md
CMake/Modules/: FindQScintillaQt5.cmake  FindQScintillaQt6.cmake  Qt5Polyfill.cmake
src/: docengine.cpp  editortabwidget.cpp  main.cpp  mainwindow.cpp  nngrun.cpp  notepadng.cpp  singleapplication.cpp
src/EditorNS/: editor.cpp  scintillatheme.cpp
src/Search/: advancedsearchdock.cpp
src/include/: mainwindow.h
src/include/EditorNS/: editor.h
src/include/Search/: advancedsearchdock.h
